# agree

./: .hoox.yaml  .neomake.yaml  .rusty-hook.toml  Cargo.toml
.github/: dependabot.yaml
.github/workflows/: release.yml
docs/: README.md
src/: archive.rs  args.rs  blueprint.rs  engine.rs  error.rs  main.rs  reference.rs
src/archive/: mod.rs  v0.rs
test/: .gitignore  blueprint.yaml  generate.yaml
