[package]
name = "agree"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "A multi-key-security CLI tool using Shamirs Secret Sharing."
homepage = "https://github.com/replicadse/agree"
repository = "https://github.com/replicadse/agree"
keywords = ["cli", "secret", "key", "sharing"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.30.0", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.21"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
bytes = "1.4.0"
itertools = "0.11.0"
anyhow = "1.0.74"
thiserror = "1.0.44"
base64 = "0.21.2"
ssss = "0.2.0"
dialoguer = "0.10.4"
argon2 = "0.5.1"
simplecrypt = "1.0.2"
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
rusty-hook = "0.11.2"
